fixed image path in app.js, stuck on fs not found error

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,6 +1,9 @@
 body {
+    height: 100vh;
     min-height: 1080px;
     overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 * {
